<resources>
    <string name="app_name">Music Player</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">Playlist</string>
    <string name="total_songs">Total Songs:</string>
    <string name="music_era_begins">Music Era Begins</string>
    <string name="song_name">SongName</string>
    <string name="back_btn">back_btn</string>
    <string name="start_text">00:00</string>
    <string name="end_text">Loading..</string>
    <string name="repeat_btn">repeat</string>
    <string name="equalizer_btn">equalizer</string>
    <string name="timer_btn">timer</string>
    <string name="share_btn">share</string>
    <string name="open">Open navigation drawer</string>
    <string name="close">close navigation drawer</string>
    <string name="app_icon">Icon</string>
    <string name="welcome_msg">Welcome To, \nMy Music App</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="podcast">Podcast</string>
    <string name="upcoming">UpComing</string>
    <string name="splash_screen_image">splash_screen_image</string>
    <string name="sangeet">Sangeet</string>
    <string name="my_music">My Music</string>
</resources>