<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Songs_run"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginTop="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_margin="10dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_bt"
            tools:ignore="SpeakableTextPresentCheck"
            android:backgroundTint="@color/white"
            app:tint="@color/black"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/back_btn"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/music_era_begins"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <ImageButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/favorite_hollow"
            tools:ignore="SpeakableTextPresentCheck"
            app:tint="@android:color/holo_red_dark"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/favourites_btn" />
    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/song_image"
        android:layout_width="205dp"
        android:layout_height="207dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/music_player_splash_screen_icon"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeWidth="7dp"
        app:strokeColor="@color/black"/>

    <TextView
        android:id="@+id/song_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/song_name"
        android:textSize="21sp"
        android:textColor="@color/black"
        android:gravity="center"
        tools:ignore="HardcodedText"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/before_btn"
            app:iconSize="40dp"
            android:layout_margin="10dp"
            app:strokeWidth="2dp"
            app:strokeColor="@color/black"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/play_pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/pause_now"
            app:iconSize="50dp"
            android:layout_margin="10dp"
            android:backgroundTint="@android:color/holo_red_light"
            app:iconTint="@color/white"
            app:shapeAppearanceOverlay="@style/curved"
            app:strokeWidth="3dp"
            app:strokeColor="@color/black"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/next_bt"
            app:iconSize="40dp"
            android:layout_margin="10dp"
            app:strokeWidth="2dp"
            app:strokeColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/start_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/start_text"
            android:layout_marginStart="5dp"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seek_bar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/end_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/end_text"
            android:layout_marginEnd="5dp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/repeat_btn"
            android:background="@android:color/transparent"
            app:tint="#F50057"
            android:layout_weight="1"
            android:contentDescription="@string/repeat_btn"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/equalizer_btn"
            android:background="@android:color/transparent"
            app:tint="@color/cool_pink"
            android:layout_weight="1"
            android:contentDescription="@string/equalizer_btn"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/timer_btn"
            android:background="@android:color/transparent"
            app:tint="#F50057"
            android:layout_weight="1"
            android:contentDescription="@string/timer_btn"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/share_btn"
            android:background="@android:color/transparent"
            app:tint="#F50057"
            android:layout_weight="1"
            android:contentDescription="@string/share_btn"/>
    </LinearLayout>
</LinearLayout>



