<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/shuffle_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/shuffle_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/ic_baseline_shuffle_24"
                android:text="@string/shuffle_btn"
                android:textColor="@color/black"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/favourites_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/favourites_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/ic_baseline_favorite_24"
                android:text="@string/favourites_btn"
                android:textColor="@color/black"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/playlist_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/playlist_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableTop="@drawable/ic_baseline_library_music_24"
                android:text="@string/playlist_btn"
                android:textColor="@color/black"
                android:textAllCaps="false"/>

        </LinearLayout>

        <TextView
            android:id="@+id/total_songs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/total_songs"
            android:textColor="@color/black"
            android:textSize="16sp">
        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/music_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>

